<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragments.CreatePasswordFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="25sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_password"
                android:textSize="32sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_info"
                android:textSize="14sp"
                android:padding="15sp"
                android:textColor="@color/disable"
                android:gravity="center"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15sp" />

            <CheckBox
                android:id="@+id/cbRemember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remember_password"
                android:textColor="@color/disable"
                android:layout_marginTop="10sp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btNextToContinue"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/facebook"
                android:textAllCaps="false"
                android:text="@string/next"
                android:textColor="@color/white" />
        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>