<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragments.NewUserWelcomeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25sp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_instagram"
                android:textSize="32sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_welcome"
                android:textSize="14sp"
                android:padding="15sp"
                android:textColor="@color/disable"
                android:gravity="center"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btCompleteSignUp"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/facebook"
                android:textAllCaps="false"
                android:text="@string/complete_signup"
                android:textColor="@color/white" />

            <TextView
                android:layout_marginTop="15sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/add_new_details"
                android:textColor="@color/facebook" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="15sp"
            android:text="@string/agree_terms"
            android:gravity="center"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>