<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_arrow_down"
                android:fontFamily="@font/helvetica"
                android:gravity="center"
                android:text="English(US)" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="15sp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="65sp"
                android:src="@drawable/instagram_text_icon" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25sp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/login_user_name_hint"
                android:padding="15sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btLogin"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/facebook"
                android:textAllCaps="false"
                android:text="@string/login"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica"
                    android:text="Forgot your login details?" />

                <TextView
                    android:id="@+id/tvForgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica_bold"
                    android:textColor="@color/blue"
                    android:text=" Get help logging in" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:padding="5sp"
                    android:text="OR" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/logo_facebook"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:text="@string/login_facebook"
                    android:textColor="@color/facebook" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/no_account"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"/>
                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:text="@string/sign_up"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/blue"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>